--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-MONGO_URL=mongodb://localhost:27017/bookstore2
+MONGO_URL=mongodb://localhost:27017/bookstore
 PORT=3300
 JWT_SECRET_KEY=your_strong_jwt_secret_here
